@@ -295,6 +295,9 @@ Trunk (unreleased changes)
     HADOOP-5364. Add certificate expiration warning to HsftpFileSystem and HDFS
     proxy. (Zhiyong Zhang via cdouglas)
 
+    HADOOP-5733. Add map/reduce slot capacity and blacklisted capacity to
+    JobTracker metrics. (Sreekanth Ramakrishnan via cdouglas)
+
   OPTIMIZATIONS
 
     HADOOP-5595. NameNode does not need to run a replicator to choose a
